# OnlyFiles

./: .gitignore  CMakeLists.txt  OnlyFiles  OnlyFiles.cbp  README.md  db.cpp  db.h  first.json  get.json  logic.cpp  logic.h  main.cpp  resurs.qrc  second.json  server.cpp  server.h
OnlyFiles_autogen/7EM65HM6UG/: moc_Manager.cpp  moc_Manger.cpp  moc_download_window.cpp  moc_main_window.cpp  moc_tcp_connect.cpp
OnlyFiles_autogen/OnlyFiles_autogen/include/: ui_main_window.h
OnlyFiles_autogen/include/: ui_download_window.h  ui_download_window_2.h  ui_download_window_ui.h  ui_main_window.h  ui_staked_windows.h  ui_untitled.h
UI_files/: download_window.ui  download_window_2.ui  main_window.ui  staked_windows.ui  untitled.ui
client/: JSon_renderer.cpp  JSon_renderer.h  Manger.cpp  Manger.h  download_window.cpp  download_window.h  file_coder.cpp  file_coder.h  main.cpp  main_window.cpp  main_window.h
